# illumix

./: .gitignore  Cargo.toml  README.md
dmx_backend/: Cargo.toml  patching.json
dmx_backend/patching/: 1kw.json  ColorWash1200.json  Eurolite_Led.json  patching.json
dmx_backend/src/: dmx.rs  frontend_server.rs  main.rs  rgb_hex.rs  server.rs
egui_frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
egui_frontend/src/: color_picker.rs  fixture_component_listener.rs  fixture_manager.rs  illumix.rs  main.rs  websocket.rs  ws_config.txt
egui_frontend/src/ui_elements/: color_picker.rs  fader.rs  fader_page(old).rs  fader_page.rs  fader_page_setup_window.rs  fixture_component_ui.rs  fixture_manager.rs  right_sidebar.rs  universe_window.rs  visual_page.rs
egui_frontend/src/ui_elements/ui_helper/: ui_auto_scalling.rs
fixture_lib/: 1kw.json  Cargo.toml  patching.json
fixture_lib/src/: fixture.rs  lib.rs  networking.rs  patching.rs  universe.rs
src/: dmx.rs  main.rs  rgb_hex.rs
