[package]
name = "dmx_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
artnet_protocol = "0.4.3"
fixture_lib = { version = "0.1.0", path = "../fixture_lib" }
serialport = "4.7.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt","std"]}
tungstenite = "0.27.0"
