[package]
name = "egui_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
derive = "1.0.0"
eframe = "0.31.1"
fixture_lib = { version = "0.1.0", path = "../fixture_lib" }
futures-sink = "0.3.31"
futures-util = "0.3.31"
image = "0.25.6"
serde = "1.0.219"
serde_json = "1.0.140"
sink = "0.1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlCanvasElement", "WebSocket", "BinaryType", "MessageEvent", "Event", "ErrorEvent"] }
